<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_title"
        android:textColor="@color/dialog_text_color"
        android:textSize="20sp" />

    <View
        android:id="@+id/dialog_title_lin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/dialog_lin_color"
        android:visibility="gone" />    
    <TextView
        android:id="@+id/description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:paddingTop="20dip"
        android:paddingBottom="20dip"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="亲，您确定要取消烹饪吗？"
        android:textColor="@color/dialog_text_color"
        android:textSize="17dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/dialog_lin_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_ok_box"
        android:orientation="horizontal" 
        >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_btn_cancel"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dialog_lin_color" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_btn_confirm"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/i_kown_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/i_kown"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_btn_ikown"
            android:textColor="@color/dialog_btn_text_color"
            android:textSize="20sp" />
        
    </LinearLayout>
</LinearLayout>