<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/top_title"
        layout="@layout/title"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/regist_usernamelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/regist_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/login_username"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black"/>

            <ImageView
                android:id="@+id/v_line"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/regist_phone_tv"
                android:background="@mipmap/vertical_line" />

            <EditText
                android:id="@+id/regist_phone_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/v_line"
                android:background="@null"
                android:hint="@string/login_username_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black"
                android:width="150dp" />
            <TextView
                android:id="@+id/regist_captcha_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/regist_captcha"
                android:background="@mipmap/yanzhengma_bg"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/regist_phone_tv"
            android:background="#e5e5e5" />

        <RelativeLayout
            android:id="@+id/captcha_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/captcha_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/regist_captcha"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/captcha_line"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/captcha_tv"
                android:background="@mipmap/vertical_line" />

            <EditText
                android:id="@+id/captcha_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/captcha_line"
                android:background="@null"
                android:hint="@string/regist_captcha_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black"
                android:width="200dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/captcha_tv"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />
        <RelativeLayout
            android:id="@+id/regist_passwordlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/regist_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/login_password"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/ps_line"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/regist_password_tv"
                android:background="@mipmap/vertical_line" />

            <EditText
                android:id="@+id/regist_password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/ps_line"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black"
                android:width="200dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/regist_password_tv"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/confirm_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/confirm_password"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/confirm_ps_line"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/confirm_password_tv"
                android:background="@mipmap/vertical_line" />

            <EditText
                android:id="@+id/confirm_password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/confirm_ps_line"
                android:background="@null"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black"
                android:width="200dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/confirm_password_tv"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />
        <Button
            android:id="@+id/commit_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/regist_btn"
            android:textSize="@dimen/normal_btn_text_size"
            android:textColor="@color/white"
            android:background="@mipmap/btn_bg"
            />
    </LinearLayout>

</LinearLayout>
