<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/top_title"
        layout="@layout/title"></include>

    <com.facebook.drawee.view.SimpleDraweeView
        xmlns:fresco="http://schemas.android.com/apk/res-auto"
        android:id="@+id/logo"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        fresco:actualImageScaleType="fitCenter"
        fresco:fadeDuration="300"
        fresco:failureImage="@mipmap/ic_launcher"
        fresco:failureImageScaleType="fitCenter"
        fresco:placeholderImage="@mipmap/ic_launcher"
        fresco:placeholderImageScaleType="fitCenter"
        fresco:viewAspectRatio="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/login_usernamelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/login_username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/login_username"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black"/>

            <ImageView
                android:id="@+id/v_line"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/login_username_tv"
                android:background="@mipmap/vertical_line" />

            <EditText
                android:id="@+id/login_username_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/v_line"
                android:background="@null"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black"
                android:width="200dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/login_username_tv"
            android:background="#e5e5e5" />

        <RelativeLayout
            android:id="@+id/login_passwordlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/login_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/login_password"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/ps_line"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/login_password_tv"
                android:background="@mipmap/vertical_line" />

            <EditText
                android:id="@+id/login_password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/ps_line"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/light_black"
                android:width="200dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/login_password_tv"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />

        <Button
            android:id="@+id/commit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_btn"
            android:textSize="@dimen/normal_btn_text_size"
            android:textColor="@color/white"
            android:background="@mipmap/btn_bg"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/go_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/green"
                android:text="@string/regist_btn"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/yellow"
                android:text="@string/forget_password"
                android:padding="10dp"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/dialog_text_color"
            android:text="@string/other_login"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="#e5e5e5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/wechat_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/weixin"
             />
        <ImageView
            android:id="@+id/qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/qq"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />
        <ImageView
            android:id="@+id/sina_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/weibo"
            />
    </LinearLayout>
</LinearLayout>
